second commit adding image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <img src="images/others/tenor.gif" id = "welcome_dance" alt="dancing step"  class = "center1" width=250/>
 
 
-    <img src="images/humans/nobita.jpeg"  class="self-border" id ="self">
+    <img src="images/humans/IMG20231020144739"  class="self-border" id ="self">
     <img src="images/humans/doremi.png" class="self-border" id ="f1">
     <img src="images/humans/shijuka.jpeg"  class="self-border" id ="f2">
     <img src="images/humans/doremon.jpeg"  class="self-border" id ="f3">
