--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<style>
+		.left, .right {
+		  float: left;
+		  width: 20%; /* The width is 20%, by default */
+		}
+		
+		.main {
+		  float: left;
+		  width: 60%; /* The width is 60%, by default */
+		}
+		
+		/* Use a media query to add a breakpoint at 800px: */
+		@media screen and (max-width: 800px) {
+		  .left, .main, .right {
+			width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+		  }
+		}
+		</style>
+		
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="src/css/stylesheet.css">
